<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>environment_common</name>
  <version>0.0.1</version>
  <description>Template package for managing an environment_template instance</description>

  <maintainer email="primordia@live.com">james</maintainer>
  <license>Apache 2.0</license>

  <depend>nav2_map_server</depend>
  <depend>nav2_common</depend>

    <exec_depend>python3-numpy</exec_depend>
    <exec_depend>python3-scipy</exec_depend>
    <exec_depend>python3-pil</exec_depend>
    <exec_depend>python3-matplotlib</exec_depend>
    <exec_depend>python3-networkx</exec_depend>
    <exec_depend>python3-requests</exec_depend>
    <exec_depend>python3-yaml</exec_depend>
    
    <exec_depend>python3-pip</exec_depend>
    <exec_depend>python3-setuptools</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>





